@@ -1,3 +1,7 @@
+TheKabal (24 June 2014)
+--------------------------------------
+Database driven sessions return - now PDO powered. More functionality to come, but it is entirely functional now.
+
 TheKabal (23 June 2014)
 --------------------------------------
 Add DB-driven session class - not yet hooked up, still work to be done.
